--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
                     <td></td>
                     <td><font face="Comic sans MS" size="6"><b></b></font></td>
                     <td width="15%"></td>
-                    <td><a href="#home" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=black>Home</font></a></td>
+                    <td><a href="#home" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=white>Home</font></a></td>
                     <td>|</td>
-                    <td><a href="#about" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=black>About</font></a></td>
+                    <td><a href="#about" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=white>About</font></a></td>
                     <td>|</td>
-                    <td><a href="#projects" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=black>Resume</font></a></td>
+                    <td><a href="#projects" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=white>Resume</font></a></td>
                     <td>|</td>
-                    <td><a href="#achievements" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=black>Education</font></a></td>
+                    <td><a href="#achievements" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=white>Education</font></a></td>
                     <td>|</td>
-                    <td><a href="#contact" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=black>Contact</font></a></td>
+                    <td><a href="#contact" class="header-link" style="text-decoration:none"><font face="Verdana" size="5" color=white>Contact</font></a></td>
                     <td width="15%"></td> <!-- Added an empty cell for balanced spacing -->
                 </tr>
             </table>
@@ -51,10 +51,10 @@
             <table border="0" cellpadding="15" cellspacing="0" width="80%" align="center">
                 <tr>
                     <td height="180" align="center" valign="middle" colspan="2">
-                        <font face="Verdana" size="7" color="#4CAF50">
+                        <font face="Verdana" size="7" color="#800080">
                             About Me
                         </font>
-                        <hr color="#4CAF50" width="90">
+                        <hr color="#800080" width="90">
                     </td>
                 </tr>
                 <tr>
@@ -82,7 +82,7 @@
                 </tr>
                 <tr>
                     <td colspan="2">
-                        <hr color="white">
+                        <hr color="#800080">
                     </td>
                 </tr>
             </table>
@@ -130,9 +130,9 @@
             <table border="0" cellpadding="15" cellspacing="0" width="80%" align="center">
                 <tr>
                     <td height="180" align="center" valign="middle">
-                        <font face="Verdana" size="7" color="#4CAF50">
+                        <font face="Verdana" size="7" color="#ff4000">
                             Education
-                            <hr color="#4CAF50" width="100">
+                            <hr color="#ff4000" width="100">
                         </font>
                     </td>
                 </tr>
@@ -246,10 +246,10 @@
                 </tr>
                 <tr>
                     <td height="180" align="center" valign="middle">
-                        <font face="Verdana" size="7" color="black">
+                        <font face="Verdana" size="7" color="#008000">
                             Contact
                         </font>
-                        <hr color="black" width="90">
+                        <hr color="#008000" width="90">
                     </td>
                 </tr>
 
